# job-portal-demo

./: $GITHUB_OUTPUT  .gitignore  README.md
.github/scripts/: deploy.sh
.github/workflows/: api-python-AutoDeployTrigger-b3d9fd1f-fc0f-4ff8-a55b-e82b3445acdd.yml  build-api-python.yml  deploy-python-api.yml  docker.yml
api-dotnet/: .editorconfig  .gitignore  JobPortal.sln  template.yaml
api-python/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  create_db.py  create_db_jobportal.py  deploy.ps1  docker-compose.dev.yml  pyproject.toml  uvicorn.ini
api-python/app/: main.py
api-python/app/core/: authz.py  config.py  dependencies.py  error_handlers.py  exceptions.py  logging.py  security.py
api-python/app/db/: base.py  do-db-ca.crt  init_db.py  session.py
api-python/app/integrations/: __init__.py  azure_blob.py  azure_docintel.py  clerk.py  email.py  redis_cache.py
api-python/app/ml/: __init__.py  embeddings.py  recommend.py
api-python/app/models/: __init__.py  application.py  audit.py  job.py  resume.py  resume_features.py  starred_and_keywords.py  user.py
api-python/app/repositories/: __init__.py  application_repo.py  job_repo.py  py_applications_repo.py  resume_features_repo.py  resume_repo.py  user_repo.py
api-python/app/routes/: __init__.py  ai_alias.py  analytics.py  applications.py  auth.py  candidates.py  health.py  jobs.py  ranking.py  resumes.py  starred_jobs.py  users.py
api-python/app/schemas/: __init__.py  application.py  common.py  docintel.py  job.py  resume.py  user.py
api-python/app/services/: __init__.py  analytics.py  application_service.py  job_service.py  matching.py  normalize.py  parsing.py  ranking.py  storage.py  user_service.py
api-python/app/utils/: __init__.py  exceptions.py  pagination.py
api-python/app/workers/: __init__.py  analytics_tasks.py  celery_app.py  resume_tasks.py
api-python/migrations/: env.py
api-python/migrations/versions/: 0eed5f68a2c4_init_pyapi.py
api-python/scripts/: prestart.sh  seed_dev.py
api-python/tests/: conftest.py  test_auth.py  test_health.py  test_resume_tasks.py  test_resumes_route.py
api-python/tests/docintel/: test_docintel_client.py  test_normalize_mapping.py
job-portal-web/: .env.example  .eslintrc.cjs  ALL_CODE.txt  README.md  empty-files.txt  find-empty-files.ps1  fix-esm-type-imports.ps1  fix-type-imports.ps1  fix-type-only-imports.ps1  index.html  package-lock.json  package.json  tsconfig.json
(+316 files in other folders)
